--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+body::-webkit-scrollbar{
+    display: none;
 }
 
 canvas {
