--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     align-items: center;
     overflow: hidden;
     font-family: 'dyna', Arial, sans-serif;
-    font-size: 60px;
 }
 
 body::-webkit-scrollbar {
@@ -19,14 +18,19 @@ body::-webkit-scrollbar {
 
 h2 {
     color: rgb(20, 34, 99);
+    font-size: 5.3em;
 }
 
-.content{
+h3 {
+    color: rgb(20, 34, 99);
+    font-size: 3.5em;
+}
+
+.content {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: aquamarine;
-    /* background-image: url('../img/startscreen/startscreen_bg.png'); */
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
@@ -34,20 +38,25 @@ h2 {
 }
 
 .startscreen {
-    display: flex;
-}
-
-.startscreen-bg {
+    position: relative;
     height: 100%;
-    width: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url('../img/startscreen/startscreen_bg.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0;
 }
 
 .menu {
-    position: absolute;
-    width: 70%;
-    height: 50%;
+    z-index: 100;
+    height: 100%;
+    width: 100vw;
     bottom: 0;
     right: 0;
+    padding-top: 25%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -55,8 +64,8 @@ h2 {
 
 .start-button {
     background-color: yellowgreen;
-    height: 130px;
-    width: 400px;
+    height: 15%;
+    width: 30%;
     background: rgb(231, 208, 3);
     border: 6px solid rgb(231, 208, 3);
     border-radius: 36px;
@@ -70,7 +79,9 @@ h2 {
     align-items: center;
 }
 
-.start-button:before {
+.start-button:before,
+.settings-button:before,
+.navigation-button:before {
     content: " ";
     position: absolute;
     z-index: -1;
@@ -80,11 +91,34 @@ h2 {
     right: 0;
     border-radius: 30px;
     border: 4px solid rgba(21, 30, 92, 0.767);
-  }
+}
 
 .start-button:hover {
     animation: none;
     /* transform: scale(1.05); */
+}
+
+.settings-button,
+.navigation-button {
+    background-color: yellowgreen;
+    height: 13%;
+    width: 23%;
+    background: rgb(64, 238, 215);
+    border: 6px solid rgb(64, 238, 215);
+    border-radius: 36px;
+    margin: 10px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    transform: scale(1);
+    /* animation: pulse 1.5s infinite; */
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.settings-button:hover,
+.navigation-button:hover {
+    transform: scale(1.15);
 }
 
 @keyframes pulse {
@@ -118,5 +152,62 @@ canvas {
 @media only screen and (max-height: 1080px) {
     canvas {
         height: 100vh;
+    }
+}
+
+@media (max-width: 1300px) {
+    h2 {
+        font-size: 4.5em;
+    }
+
+    h3 {
+        font-size: 3em;
+    }
+
+    .start-button {
+        height: 140px;
+    }
+
+    .settings-button,
+    .navigation-button {
+        height: 120px;
+    }
+}
+
+@media (max-width: 1050px) {
+    h2 {
+        font-size: 4em;
+    }
+
+    h3 {
+        font-size: 2.5em;
+    }
+
+    .start-button {
+        height: 120px;
+    }
+
+    .settings-button,
+    .navigation-button {
+        height: 100px;
+    }
+}
+
+@media (max-width: 900px) {
+    h2 {
+        font-size: 3em;
+    }
+
+    h3 {
+        font-size: 2em;
+    }
+
+    .start-button {
+        height: 100px;
+    }
+
+    .settings-button,
+    .navigation-button {
+        height: 80px;
     }
 }
