--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h3 {
     background-image: url('../img/startscreen/startscreen_bg.png');
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: 0;
+    background-position: center;
 }
 
 .menu {
@@ -64,8 +64,8 @@ h3 {
 
 .start-button {
     background-color: yellowgreen;
-    height: 15%;
-    width: 30%;
+    height: 180px;
+    width: 450px;
     background: rgb(231, 208, 3);
     border: 6px solid rgb(231, 208, 3);
     border-radius: 36px;
@@ -77,6 +77,8 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: -30px;
+    margin-right: -30px;
 }
 
 .start-button:before,
@@ -101,8 +103,8 @@ h3 {
 .settings-button,
 .navigation-button {
     background-color: yellowgreen;
-    height: 13%;
-    width: 23%;
+    height: 150px;
+    width: 360px;
     background: rgb(64, 238, 215);
     border: 6px solid rgb(64, 238, 215);
     border-radius: 36px;
@@ -152,6 +154,21 @@ canvas {
 @media only screen and (max-height: 1080px) {
     canvas {
         height: 100vh;
+    }
+}
+
+@media (max-width: 1700px) {
+    .start-button {
+        height: 150px;
+        width: 30%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .settings-button,
+    .navigation-button {
+        height: 130px;
+        width: 23%;
     }
 }
 
