--- a/style.css
+++ b/style.css
@@ -17,7 +17,19 @@ body::-webkit-scrollbar {
 }
 
 .d-none {
-    display: none;
+    display: none !important;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.center {
+    justify-content: center !important;
+}
+
+.pos-unset {
+    position: unset !important;
 }
 
 h1 {
@@ -84,7 +96,20 @@ span {
     cursor: default;
 }
 
+.fs-70 {
+    font-size: 70px;
+}
+
+.w-344 {
+    width: 344px;
+}
+
+.w-750 {
+    width: 750px;
+}
+
 .content {
+    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -316,9 +341,19 @@ canvas {
 
 .pause-screen {
     position: absolute;
+    background-color: #0000009d;
     z-index: 99;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.back-btn-container-adjustment {
+    height: 250px;
+    justify-content: center;
 }
 
 @keyframes pulse {
@@ -337,7 +372,6 @@ canvas {
         box-shadow: 0 0 0 0 rgba(231, 208, 3, 0);
     }
 }
-
 
 /* @media only screen and (max-width: 1920px) {
     canvas {
