--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body::-webkit-scrollbar {
     display: flex;
 }
 
+.d-flex-centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .center {
     justify-content: center !important;
 }
@@ -69,10 +75,10 @@ h5 {
 
 h6 {
     margin: 0;
-    margin-bottom: 50px;
+    /* margin-right: -20px; */
     color: rgb(231, 208, 3);
     /* color: rgb(250, 245, 216); */
-    font-size: 8em;
+    font-size: 10em;
 }
 
 h1,
@@ -115,6 +121,18 @@ span {
 
 .w-750 {
     width: 750px;
+}
+
+.mt-50 {
+    margin-top: 50px;
+}
+
+.mt-120 {
+    margin-top: 120px;
+}
+
+.mt-140 {
+    margin-top: 140px;
 }
 
 .content {
@@ -279,6 +297,17 @@ canvas {
     width: 50px;
 }
 
+.home-icon {
+    height: 34px;
+    width: 34px;
+    margin-bottom: 3px;
+    margin-right: 2px;
+}
+
+.home-icon-adjustment {
+    margin-right: 0 !important;
+}
+
 .restart-icon {
     height: 42px;
     width: 42px;
@@ -354,10 +383,9 @@ canvas {
     top: 18px;
 }
 
-.pause-screen,
-.lose-screen {
+.pause-screen {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: 99;
     width: 100%;
     height: 100%;
@@ -367,14 +395,57 @@ canvas {
     justify-content: center;
 }
 
-.back-btn-container-adjustment {
-    height: 250px;
+.lose-screen {
+    position: absolute;
+    z-index: 99;
+    background-image: url('../img/description/losing_screen.png');
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
-.lose-screen-container-adjustment{
-    height: 200px;
+.win-screen {
+    position: absolute;
+    z-index: 99;
+    background-image: url('../img/description/winning_screen.png');
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
+}
+
+.back-btn-container-adjustment {
+    height: 150px;
+    justify-content: center;
+}
+
+.lose-screen-container-adjustment {
+    height: 180px;
+    justify-content: center;
+}
+
+.resume-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    /* margin-top: 20px; */
+}
+
+.resume-box {
+    display: flex;
+}
+
+.pufferfish-img {
+    height: 100px;
+    width: 120px;
 }
 
 @keyframes pulse {
