--- a/style.css
+++ b/style.css
@@ -395,23 +395,9 @@ canvas {
     justify-content: center;
 }
 
-.lose-screen {
+.end-screen {
     position: absolute;
     z-index: 99;
-    background-image: url('../img/description/losing_screen.png');
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.win-screen {
-    position: absolute;
-    z-index: 99;
-    background-image: url('../img/description/winning_screen.png');
     background-position: center;
     width: 100%;
     height: 100%;
@@ -436,7 +422,6 @@ canvas {
     justify-content: center;
     align-items: center;
     height: 150px;
-    /* margin-top: 20px; */
 }
 
 .resume-box {
