--- a/style.css
+++ b/style.css
@@ -385,7 +385,8 @@ canvas {
 
 .pause-screen {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.6);
+    /* z-index: 90; */
+    background-color: rgba(0, 0, 0, 0.75);
     z-index: 99;
     width: 100%;
     height: 100%;
@@ -431,6 +432,12 @@ canvas {
 .pufferfish-img {
     height: 100px;
     width: 120px;
+}
+
+.killerwhale-img {
+    height: 150px;
+    width: 150px;
+    margin-top: 10px;
 }
 
 @keyframes pulse {
