--- a/style.css
+++ b/style.css
@@ -75,9 +75,7 @@ h5 {
 
 h6 {
     margin: 0;
-    /* margin-right: -20px; */
     color: rgb(231, 208, 3);
-    /* color: rgb(250, 245, 216); */
     font-size: 10em;
 }
 
@@ -109,6 +107,13 @@ h6 {
 
 span {
     cursor: default;
+}
+
+p {
+    font-size: 3em;
+    margin: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .fs-70 {
@@ -186,7 +191,8 @@ canvas {
 .start-button:before,
 .settings-button:before,
 .navigation-button:before,
-.settings-text:before {
+.settings-text:before,
+.keybindings-container:before {
     content: " ";
     position: absolute;
     z-index: -1;
@@ -213,6 +219,18 @@ canvas {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
     transform: scale(1);
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.keybindings-container {
+    background-color: rgb(231, 208, 3);
+    border: 6px solid rgb(231, 208, 3);
+    border-radius: 36px;
+    margin: 8px;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+    transform: scale(1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -385,7 +403,6 @@ canvas {
 
 .pause-screen {
     position: absolute;
-    /* z-index: 90; */
     background-color: rgba(0, 0, 0, 0.75);
     z-index: 99;
     width: 100%;
@@ -438,6 +455,53 @@ canvas {
     height: 150px;
     width: 150px;
     margin-top: 10px;
+}
+
+.navigation-bg {
+    height: 90%;
+    width: 80%;
+    background-color: rgba(0, 0, 0, 0.45);
+    border-radius: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.navigation-row {
+    height: 20%;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+}
+
+.navigation-row-adjustment {
+    margin-bottom: 5%;
+}
+
+.navigation-text {
+    width: 50%;
+    font-size: 4.2em !important;
+}
+
+.keybindings-movement {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.keybindings-section {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.w-75 {
+    width: 75px;
 }
 
 @keyframes pulse {
