fixed bugs Version 1.1

--- a/style.css
+++ b/style.css
@@ -520,11 +520,11 @@ canvas {
     }
 }
 
-/* @media only screen and (max-width: 1920px) {
+@media only screen and (max-width: 1920px) {
     canvas {
         width: 100%;
     }
-} */
+}
 
 @media only screen and (max-height: 1080px) {
     canvas {
