--- a/style.css
+++ b/style.css
@@ -3,6 +3,21 @@
     src: url('../fonts/dyna_puff.ttf') format('truetype');
 }
 
+@media screen and (orientation:portrait) {
+    html {
+        transform: rotate(-90deg);
+        transform-origin: left top;
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+    }
+}
+
+/* @media screen and (orientation:landscape) {} */
+
 body {
     margin: 0;
     display: flex;
