--- a/style.css
+++ b/style.css
@@ -3,33 +3,6 @@
     src: url('../fonts/dyna_puff.ttf') format('truetype');
 }
 
-@media screen and (orientation:portrait) {
-    .screen-rotate {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: fixed;
-        z-index: 999;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 100vw;
-        background-color: #232323;
-    }
-
-    .screen-rotate span {
-        font-size: 2em;
-        color: rgb(250, 245, 216);
-        text-align: center;
-    }
-}
-
-@media screen and (orientation:landscape) {
-    .screen-rotate {
-        display: none;
-    }
-}
-
 body {
     margin: 0;
     display: flex;
@@ -84,9 +57,9 @@ h3 {
 }
 
 h4 {
-    width: 440px;
+    width: 370px;
     margin: 0;
-    font-size: 90px;
+    font-size: 4.5em;
     color: rgb(250, 245, 216);
     letter-spacing: 3px;
 }
@@ -143,16 +116,16 @@ p {
     margin-right: 40px;
 }
 
-.fs-70 {
-    font-size: 70px;
+.fs-4 {
+    font-size: 4em !important;
 }
 
 .w-344 {
     width: 344px;
 }
 
-.w-750 {
-    width: 750px;
+.w-690 {
+    width: 690px;
 }
 
 .mt-50 {
@@ -213,7 +186,6 @@ canvas {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* gap: 40px; */
 }
 
 .startscreen-btn-box {
@@ -305,8 +277,8 @@ canvas {
 .difficulty-circle-btn,
 .sound-circle-btn,
 .fullscreen-circle-btn {
-    height: 110px;
-    width: 110px;
+    height: 100px;
+    width: 100px;
     background-color: rgb(64, 238, 215);
     border: 6px solid rgb(64, 238, 215);
     border-radius: 50%;
@@ -391,12 +363,13 @@ canvas {
 
 .change-display {
     flex-direction: column;
+    align-items: center;
     gap: 25px;
 }
 
 .sound-container,
 .difficulty-container {
-    width: 90%;
+    width: 95%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -419,8 +392,8 @@ canvas {
 }
 
 .difficulty-icon {
-    height: 70px;
-    width: 70px;
+    height: 68px;
+    width: 68px;
 }
 
 .yellow-highlight {
@@ -449,7 +422,7 @@ canvas {
     object-fit: contain;
 }
 
-.coins-count-container {
+.overlay-container {
     height: 100px;
     width: 100%;
     position: absolute;
@@ -459,11 +432,17 @@ canvas {
     top: 0.8vh;
 }
 
+.coins-count-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    gap: 50px;
+}
+
 .coins {
-    margin-left: 15vw;
-    width: 15vw;
     font-size: 1em;
-    text-align: start;
+    text-align: center;
 }
 
 .pause-screen {
@@ -482,6 +461,8 @@ canvas {
     position: absolute;
     z-index: 99;
     background-position: center;
+    background-size: cover;
+    background-repeat: repeat;
     width: 100%;
     height: 100%;
     display: flex;
@@ -524,7 +505,7 @@ canvas {
 
 .navigation-bg {
     height: 90%;
-    width: 80%;
+    width: 90%;
     background-color: rgba(0, 0, 0, 0.45);
     border-radius: 100px;
     display: flex;
@@ -535,11 +516,12 @@ canvas {
 
 .navigation-row {
     height: 20%;
-    width: 80%;
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 100px;
+    gap: 50px;
+    margin-left: -300px;
 }
 
 .navigation-row-adjustment {
@@ -547,19 +529,19 @@ canvas {
 }
 
 .navigation-text {
-    width: 50%;
+    width: 55%;
     font-size: 4.2em !important;
 }
 
 .keybindings-movement {
-    width: 50%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .keybindings-section {
-    width: 50%;
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -567,6 +549,17 @@ canvas {
 
 .w-75 {
     width: 75px;
+}
+
+.coin-counter-img {
+    height: 95px;
+    width: 95px;
+}
+
+.mobile-movement-container,
+.mobile-attack-container,
+.mobile-pause-container {
+    display: none;
 }
 
 @keyframes pulse {
@@ -586,17 +579,32 @@ canvas {
     }
 }
 
-/* @media only screen and (max-width: 1920px) {
-    canvas {
-        width: 100%;
+@media screen and (orientation:portrait) {
+    .screen-rotate {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        z-index: 999;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        background-color: #232323;
+    }
+
+    .screen-rotate span {
+        font-size: 2em;
+        color: rgb(250, 245, 216);
+        text-align: center;
     }
 }
 
-@media only screen and (max-height: 1080px) {
-    canvas {
-        height: 100vh;
+@media screen and (orientation:landscape) {
+    .screen-rotate {
+        display: none;
     }
-} */
+}
 
 @media (max-width: 1700px) {
     .start-button {
@@ -611,6 +619,10 @@ canvas {
         height: 130px;
         width: 23%;
     }
+
+    .navigation-row {
+        margin-left: -200px;
+    }
 }
 
 @media (max-width: 1300px) {
@@ -622,6 +634,10 @@ canvas {
         font-size: 3em;
     }
 
+    h6 {
+        font-size: 8.5em;
+    }
+
     .start-button {
         height: 140px;
     }
@@ -629,6 +645,35 @@ canvas {
     .settings-button,
     .navigation-button {
         height: 120px;
+    }
+
+    .mt-50 {
+        margin: 0;
+    }
+
+    .w-344 {
+        width: 310px;
+    }
+
+    .coins-count-container {
+        height: 80px;
+    }
+
+    .coin-counter-img {
+        height: 75px;
+        width: 75px;
+    }
+
+    .coins-count-container {
+        gap: 25px;
+    }
+
+    .w-120 {
+        width: 120px !important;
+    }
+
+    .navigation-row {
+        margin-left: -25px;
     }
 }
 
@@ -646,26 +691,34 @@ canvas {
     }
 
     h4 {
-        width: 440px;
-        margin: 0;
-        font-size: 90px;
-        color: rgb(250, 245, 216);
-        letter-spacing: 3px;
+        width: 260px !important;
+        font-size: 3em !important;
     }
 
+    h4,
     h5 {
-        width: 150px;
-        text-align: end;
-        margin: 0;
-        font-size: 75px;
-        color: rgb(250, 245, 216);
-        letter-spacing: 3px;
+        text-shadow:
+            -1px -1px 0 #4e4e4e,
+            1px -1px 0 #383838,
+            -1px 1px 0 #535353,
+            1px 1px 0 #505050,
+            1px 0px 1px #CCCCCC,
+            0px 1px 1px #EEEEEE,
+            2px 1px 1px #646464,
+            1px 2px 1px #EEEEEE,
+            3px 2px 1px #9c9c9c,
+            2px 3px 1px #EEEEEE,
+            4px 3px 1px #CCCCCC,
+            3px 4px 1px #EEEEEE;
     }
 
     h6 {
-        margin: 0;
-        color: rgb(231, 208, 3);
-        font-size: 10em;
+        font-size: 5.5em;
+        margin-right: -70px;
+    }
+
+    .mt-140 {
+        margin-top: 15px;
     }
 
     .start-button {
@@ -692,9 +745,237 @@ canvas {
         margin-top: 7%;
         gap: 50px;
     }
+
+    .navigation-text {
+        font-size: 2.7em !important;
+    }
+
+    p {
+        font-size: 1.8em;
+        margin: 0;
+    }
+
+    .keybindings-container {
+        height: 43px;
+        width: 45px;
+        border: 3px solid rgb(231, 208, 3);
+        border-radius: 18px;
+        margin: 4px;
+    }
+
+    .keybindings-container:before {
+        border-radius: 16px;
+        border: 3px solid rgba(21, 30, 92, 0.767);
+    }
+
+    .navigation-row-adjustment {
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
+
+    .keybindings-cont-mobile {
+        width: 140px;
+    }
+
+    .back-btn {
+        top: 15px;
+        right: 15px;
+        height: 50px;
+        width: 50px;
+        border: 3px solid rgb(64, 238, 215);
+    }
+
+    .back-btn:before {
+        border: 3px solid rgba(21, 30, 92, 0.767);
+    }
+
+    .home-icon {
+        height: 28px;
+        width: 28px;
+        margin: 0;
+        margin-bottom: 3px;
+    }
+
+    .change-display {
+        gap: 10px;
+    }
+
+    .selection-text-container {
+        display: none;
+    }
+
+    .difficulty-circle-btn,
+    .sound-circle-btn,
+    .fullscreen-circle-btn {
+        margin: 12px;
+    }
+
+    .fullscreen-circle-btn,
+    .sound-circle-btn,
+    .difficulty-circle-btn {
+        width: 65px;
+        height: 65px;
+    }
+
+    .fullscreen-icon,
+    .setting-icon {
+        height: 35px;
+        width: 35px;
+    }
+
+    .difficulty-icon {
+        height: 38px;
+        width: 38px;
+    }
+
+    .fs-4 {
+        font-size: 3em !important;
+    }
+
+    .w-344 {
+        width: 200px;
+    }
+
+    .w-690 {
+        width: 450px !important;
+    }
+
+    .fs-4 {
+        font-size: 2.4em !important;
+    }
+
+    .back-icon {
+        height: 37px;
+        width: 37px;
+    }
+
+    .restart-icon {
+        height: 33px;
+        width: 33px;
+    }
+
+    .back-btn-container-adjustment {
+        height: 90px;
+    }
+
+    .end-screen-container-adjustment {
+        height: 100px;
+    }
+
+    .resume-container {
+        height: 90px;
+    }
+
+    .coin-img {
+        height: 65px;
+        width: 65px;
+    }
+
+    .pufferfish-img {
+        height: 40px;
+        width: 55px;
+    }
+
+    .killerwhale-img {
+        height: 70px;
+        width: 70px;
+    }
+
+    .resume-box {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .counter {
+        width: 80px !important;
+        font-size: 2.6em !important;
+    }
+
+    .coins-count-container {
+        height: 50px;
+    }
+
+    .coin-counter-img {
+        height: 55px;
+        width: 55px;
+    }
+
+    .w-120 {
+        width: 90px !important;
+    }
+
+    .mobile-movement-container {
+        position: absolute;
+        z-index: 1;
+        left: 15px;
+        bottom: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .mobile-movement-box,
+    .mobile-attack-box,
+    .mobile-pause-box {
+        opacity: 0.9;
+        height: 33px;
+        width: 36px;
+        background-color: rgb(231, 208, 3);
+        border: 3px solid rgb(231, 208, 3);
+        border-radius: 12px;
+        margin: 2px;
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+        transform: scale(1);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .mobile-movement-box p,
+    .mobile-attack-box p,
+    .mobile-pause-box p {
+        font-size: 1.2em !important;
+    }
+
+    .mobile-movement-box:before,
+    .mobile-attack-box:before,
+    .mobile-pause-box:before {
+        content: " ";
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        border-radius: 9px;
+        border: 2px solid rgba(21, 30, 92, 0.767);
+    }
+
+    .mobile-attack-container {
+        position: absolute;
+        z-index: 1;
+        right: 15px;
+        bottom: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 4px;
+    }
+
+    .mobile-pause-container {
+        position: absolute;
+        z-index: 1;
+        right: 15px;
+        top: 15%;
+    }
+
+    .w-70 {
+        width: 70px !important;
+    }
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 700px) {
     h1 {
         font-size: 6em;
     }
@@ -706,6 +987,7 @@ canvas {
     h3 {
         font-size: 1.7em;
     }
+
     .start-button {
         height: 95px;
         width: 200px;
@@ -724,5 +1006,36 @@ canvas {
     .startscreen-btn-box {
         height: 30%;
         gap: 25px;
+    }
+
+    .navigation-text {
+        font-size: 2.3em !important;
+    }
+
+    .keybindings-container {
+        height: 36px;
+        width: 40px;
+    }
+
+    .keybindings-cont-mobile {
+        width: 120px;
+    }
+
+    p {
+        font-size: 1.6em;
+    }
+
+    .coins-count-container {
+        height: 30px;
+        gap: 0;
+    }
+
+    .coin-counter-img {
+        height: 33px;
+        width: 33px;
+    }
+
+    .w-120 {
+        width: 60px !important;
     }
 }
