--- a/style.css
+++ b/style.css
@@ -563,6 +563,41 @@ canvas {
     cursor: default;
 }
 
+.arrow {
+    width: 24px;
+    height: 24px;
+}
+
+.up {
+    margin-bottom: 2px;
+    transform: rotate(180deg);
+}
+
+.down {
+    margin-top: 2px;
+}
+
+.left {
+    margin-right: 4px;
+    transform: rotate(90deg);
+}
+
+.right {
+    margin-left: 2px;
+    transform: rotate(-90deg);
+}
+
+.mb-25 {
+    align-self: flex-end;
+    margin-bottom: 5px !important;
+}
+
+.arrows-box-adjustment {
+    display: flex;
+    height: 84px;
+    margin-top: -4px;
+}
+
 @keyframes pulse {
     0% {
         transform: scale(1);
