--- a/style.css
+++ b/style.css
@@ -1010,6 +1010,11 @@ canvas {
     .w-70 {
         width: 70px !important;
     }
+
+    .navigation-bg {
+        border-radius: 50px;
+    }
+
 }
 
 @media (max-width: 700px) {
@@ -1035,6 +1040,20 @@ canvas {
         width: 160px;
     }
 
+    .navigation-bg {
+        border-radius: 50px;
+    }
+
+    .navigation-row {
+        width: 95%;
+        gap: 15px;
+        margin-left: 0 !important;
+    }
+
+    .navigation-row-adjustment {
+        margin-bottom: 5%;
+    }
+
     .navigation-button {
         height: 70px;
         width: 160px;
@@ -1046,7 +1065,7 @@ canvas {
     }
 
     .navigation-text {
-        font-size: 2.3em !important;
+        font-size: 1.9em !important;
     }
 
     .keybindings-container {
@@ -1059,7 +1078,7 @@ canvas {
     }
 
     p {
-        font-size: 1.6em;
+        font-size: 1.5em;
     }
 
     .coins-count-container {
